Fixed error advertisment banner collaps and favrouit section at blog details page

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1870,7 +1870,7 @@ body {
 }
 
 .favourite__category>.category__list>figure>a:hover>img {
-    scale: 2;
+    scale: 1.3;
 }
 
 /* SUBSCRIPTION CSS */
